--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,25 +15,26 @@
 }
 
 .container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
 @media (min-width: 300px) {
-  .container {
+  .space {
     padding: 0px 20px;
   }
 }
 
-@media (min-width: 640px) {
-  .container {
+@media (min-width: 768px) {
+  .space {
     padding: 0px 60px;
   }
 }
 
-@media (min-width: 768px) {
-  .container {
+@media (min-width: 1024px) {
+  .space {
     padding: 0px 120px;
   }
 }
@@ -41,4 +42,22 @@
 .body {
   flex: 1;
   flex-direction: column;
+}
+
+@media (min-width: 300px) {
+  .body {
+    padding: 10px 20px;
+  }
+}
+
+@media (min-width: 768px) {
+  .body {
+    padding: 10px 60px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .body {
+    padding: 10px 120px;
+  }
 }
